# Weather-Backend-App

./: .gitignore  CMakeLists.txt  README.md  WeatherClient.cpp  WeatherClient.h  WeatherServer.cpp  WeatherServer.h  main.cpp  test_latency.cpp  test_resource_usage.cpp  test_throughput.cpp
Commands/: Command.h  CommandInvoker.h  RequestWeatherReportCommand.h  UpdateWeatherDataCommand.h  WeatherCommands.h  WeatherReceiver.h
Notifications/: NotificationTypes.h  NotificationsAbstractFactory.h
Proxy/: WeatherService.h  WeatherServiceProxy.h
